<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="@dimen/itemmargin"
        android:paddingRight="@dimen/itemmargin">

        <ImageView android:src="@drawable/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/itemmargin"
            android:layout_gravity="center_horizontal" />

            <EditText android:id="@+id/tv_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText android:id="@+id/tv_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemmargin"
            android:layout_marginBottom="@dimen/itemmargin"
            android:padding="@dimen/itemmargin"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/itemmargin"
            android:text="@string/noAccount"
            android:gravity="center"
            android:clickable="true"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>