<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.driveby.alexa.carstop.fragment.SettingsFragment"
    android:background="@drawable/main">

    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_about_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/itemmargin"
            android:layout_marginRight="@dimen/itemmargin"/>

        <TextView
            android:id="@+id/lbl_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/itemmargin"
            android:layout_marginRight="@dimen/itemmargin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/txt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="#c5c5c5"
            android:textColor="#FFFFFF"
            android:inputType="textCapSentences|textPersonName"
            android:hint="@string/firstname"
            android:layout_marginLeft="@dimen/itemmargin"
            android:layout_marginRight="@dimen/itemmargin"/>

        <EditText
            android:id="@+id/txt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#c5c5c5"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            android:layout_marginLeft="@dimen/itemmargin"
            android:layout_marginRight="@dimen/itemmargin"/>

        <EditText
            android:id="@+id/txt_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="#c5c5c5"
            android:textColor="#FFFFFF"
            android:inputType="phone"
            android:hint="@string/phone_mobile"
            android:layout_marginLeft="@dimen/itemmargin"
            android:layout_marginRight="@dimen/itemmargin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/itemmargin"
                android:layout_weight="1"
                android:textColorHint="#c5c5c5"
                android:textColor="#FFFFFF"
                android:text="@string/chooseLanguage"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/itemmargin"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/itemmargin"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>
